--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,17 @@
 name = "widgetr"
 version = "0.1.0"
 edition = "2021"
+authors = ["Jaden Accord <dev@jadenaccord.com>"]
+readme = "README.md"
+repository = "https://github.com/Jayby18/widgetr"
+keywords = ["tui", "widgets"]
+categories = ["visualization", "os"]
+exclude = []
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 anyhow = "1.0.75"
 crossterm = "0.27.0"
+ratatui = "0.23.0"
+sysinfo = "0.29.10"
